[package]
name = "ark-anon-vote"
version = "0.0.1"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0" }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-relations = { version = "^0.3.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
